@@ -45,6 +45,7 @@ fixed bugs:
   SCIP now only stops when sufficiently many solutions better than the objective limit have been found
 - fixed bug when adding binary implications with non-vartype binary variables
 - fixed bug resulting in trying to delete an upgraded linear constraint a second time in exitpre callback
+- fixed bug in nlp diving heuristic for fractional variables with values slightly outside of their domain
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
